app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cinzel:wght@400..900&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

*{
  overflow-x: hidden;
}
/* Define scrollbar styles */
::-webkit-scrollbar {
  width: 12px; /* Thicker scrollbar */
  border-radius: 6px; /* Slight border radius */ /* Longer scrollbar */
}

/* Track */
::-webkit-scrollbar-track {
  background: #131313; /* Background color */
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #F4A639;
  border-radius: 6px;
  height: 100px; /* Slight border radius */
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #FFC857;
}

@media (max-width:600px) {
  ::-webkit-scrollbar {
    display:none;
  }
}

.contact-us-text,
.contact-us-mails,
.faq-accordion,
.glass-footer,
.UphoriaText,
.EventName {
  font-family: "Times New Roman", Times, serif;
}

.EventTime,
.eventmonth,
.explore,
.eventdate,
.contact-us-header,
.FAQHeading {
  font-family: "Cinzel";
}

.UphoriaText span {
  font-family: "Cinzel Decorative";
  text-shadow: 0px 3px 10px #f58220;
  text-shadow: 0px 6px 20px 0px #ffad0e;
  text-shadow: 0px 4px 6px 0px #000000;
}

.EventHeader {
  font-family: "Cinzel Decorative";
  text-transform: uppercase;
  text-shadow: 0px 4px 20px #f58220;
}

.EventTime {
  text-shadow: 0px 4px 20px #000000;
}

.explore {
  text-transform: uppercase;
  box-shadow: 0px 4px 4px 0px #00000040;
  box-shadow: 0px 4px 10px 0px #000000;
  text-shadow: 0px 4px 17px #000000;
  transition: 0.15s ease-in;
}

.explore:hover {
  border: 1px solid #ffad0e;
  text-shadow: 0px 4px 10px #ffad0e;
  box-shadow: 0px 2px 10px 0px #ffad0e;
  box-shadow: 0px 0px 10px 0px #f58220;
}

.TimelineHeading {
  font-family: "Cinzel Decorative";
  text-shadow: 0px 4px 20px #f58220;
}

.EventName {
  background: linear-gradient(180deg, #ffad0e 0%, #f58220 100%);
  color: transparent;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.eventdate {
  color: transparent;
  background: linear-gradient(180deg, #ffad0e 32.63%, #f58220 103.39%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  /* Text border */
  -webkit-text-stroke: 2px #ffad0e;
}

.contact-us-header {
  text-shadow: 0px 6px 10px #ffad0e80;
}

.FAQHeading {
  text-shadow: 0px 4px 20px #f58220;
}

